# mt_cmake

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/dependence/: CMakeLists.txt
src/examples/dependence/external_project_example/: CMakeLists.txt
src/examples/dependence/external_project_example/src/: main.cpp
src/examples/dependence/fetch_content_example/: CMakeLists.txt
src/examples/dependence/fetch_content_example/src/: main.cpp
src/examples/dependence/find_module/: CMakeLists.txt
src/examples/dependence/find_module/cmake/: FindObscure.cmake
src/examples/dependence/find_module/dep_source/: CMakeLists.txt
src/examples/dependence/find_module/dep_source/include/obscure/: obscure.hpp
src/examples/dependence/find_module/dep_source/src/: internal.cpp  internal.hpp  obscure.cpp
src/examples/dependence/find_module/src/: main.cpp
src/examples/dependence/find_package_example/: CMakeLists.txt
src/examples/dependence/find_package_example/src/: main.cpp
src/examples/export_symbol/: CMakeLists.txt
src/examples/export_symbol/include/export/: tools.h
src/examples/export_symbol/src/: tools.cpp
src/examples/print_commit/: CMakeLists.txt
src/examples/print_commit/src/: print_commit.cpp
